data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1493.wast
;; 4. **Unreachable in a Loop with Call:**    - **Test Description:** Define a function that contains a loop calling another function, and within the loop, an `unreachable` instruction is executed if the loop condition changes.    - **Constraint Checked:** Ensures the loop execution behaves as expected with immediate traps due to the `unreachable` instructions without valid exits.    - **Improper Handling Aspect:** Validates that loop iterations are interrupted by unreachable traps and do not continue invalid function call sequences.

(assert_invalid
  (module (func $unreachable-loop-call (result i32)
    (loop (call $dummy) (unreachable) (br 0))
  ))
  "type mismatch"
)